--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -4,4 +4,11 @@
     color: #404040;
     font-weight: bold;
   }
+  .apChart {
+    width: 100%;
+  }
+  .apChart1 {
+    margin: 20px 0 0 0;
+    width: 100%;
+  }
 }
