--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -8,7 +8,6 @@
     margin: 25px 20px 20px 20px;
     h4 {
       color: #a57f0d;
-      font-weight: bold;
     }
     h5 {
       color: #404040;
@@ -24,7 +23,6 @@
     margin: 25px 20px 20px 20px;
     h4 {
       color: #55a659;
-      font-weight: bold;
     }
     h5 {
       color: #404040;
@@ -41,7 +39,6 @@
     margin: 25px 20px 20px 20px;
     h4 {
       color: #ef5350;
-      font-weight: bold;
     }
     h5 {
       color: #404040;
@@ -56,7 +53,7 @@
   width: 100%;
   // align-items: center;
   box-shadow: 0px 10px 20px #dfdfdf;
-  margin: 0 0 25px 0;
+  margin: 40px 0 25px 0;
   border-radius: 16px;
   .imgContainer {
     width: 16%;
