--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -53,7 +53,7 @@
   width: 100%;
   // align-items: center;
   box-shadow: 0px 10px 20px #dfdfdf;
-  margin: 40px 0 25px 0;
+  margin: 15px 0 25px 0;
   border-radius: 16px;
   .imgContainer {
     width: 16%;
@@ -124,14 +124,17 @@
     .infectedCard {
       text-align: center;
       margin: 20px 0 20px 0;
+      padding: 20px;
     }
     .recoveredCard {
       text-align: center;
       margin: 20px 0 20px 0;
+      padding: 20px;
     }
     .deathsCard {
       text-align: center;
       margin: 20px 0 20px 0;
+      padding: 20px;
     }
   }
   .filterContainer {
@@ -143,10 +146,9 @@
       display: flex;
       flex-direction: column;
       img {
-        width: 100%;
+        width: 85%;
         height: 150px;
-        margin: 0px 20px 20px 20px;
-        // padding: 20px;
+        margin: 20px 20px 20px 20px;
         border-radius: 16px;
         box-shadow: none;
         align-self: center;
@@ -178,64 +180,64 @@
   }
 }
 
-@media only screen and (max-width: 1004px) {
-  .cardContainer {
-    // padding: 20px;
-    display: flex;
-    flex-direction: column;
-    .infectedCard {
-      text-align: center;
-      margin: 20px 0 20px 0;
-    }
-    .recoveredCard {
-      text-align: center;
-      margin: 20px 0 20px 0;
-    }
-    .deathsCard {
-      text-align: center;
-      margin: 20px 0 20px 0;
-    }
-  }
-  .filterContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .imgContainer {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      img {
-        width: 100%;
-        height: 150px;
-        margin: 0px 20px 20px 20px;
-        // padding: 20px;
-        border-radius: 16px;
-        box-shadow: none;
-        align-self: center;
-      }
-      h5 {
-        text-align: center;
-        color: #404040;
-        font-weight: bold;
-      }
-    }
-    .filterInformations {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-      p {
-        text-align: center;
-      }
-    }
-    .filterInformations1 {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-      p {
-        text-align: center;
-      }
-    }
-  }
-}
+// @media only screen and (max-width: 1004px) {
+//   .cardContainer {
+//     // padding: 20px;
+//     display: flex;
+//     flex-direction: column;
+//     .infectedCard {
+//       text-align: center;
+//       margin: 20px 0 20px 0;
+//     }
+//     .recoveredCard {
+//       text-align: center;
+//       margin: 20px 0 20px 0;
+//     }
+//     .deathsCard {
+//       text-align: center;
+//       margin: 20px 0 20px 0;
+//     }
+//   }
+//   .filterContainer {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     .imgContainer {
+//       width: 100%;
+//       display: flex;
+//       flex-direction: column;
+//       img {
+//         width: 100%;
+//         height: 150px;
+//         margin: 0px 20px 20px 20px;
+//         // padding: 20px;
+//         border-radius: 16px;
+//         box-shadow: none;
+//         align-self: center;
+//       }
+//       h5 {
+//         text-align: center;
+//         color: #404040;
+//         font-weight: bold;
+//       }
+//     }
+//     .filterInformations {
+//       width: 100%;
+//       display: flex;
+//       flex-direction: column;
+//       padding: 20px;
+//       p {
+//         text-align: center;
+//       }
+//     }
+//     .filterInformations1 {
+//       width: 100%;
+//       display: flex;
+//       flex-direction: column;
+//       padding: 20px;
+//       p {
+//         text-align: center;
+//       }
+//     }
+//   }
+// }
